--- a/stylesheets/Tako.pullrefresh.styl
+++ b/stylesheets/Tako.pullrefresh.styl
@@ -33,6 +33,9 @@ div.pulltorefresh
       margin-right 1em
       font-size 2em
 
+      &.down-big
+        transition-duration 250ms
+
       &.animated
         border none
         font-size 3em
