--- a/package/stylesheets/tako.css
+++ b/package/stylesheets/tako.css
@@ -191,7 +191,7 @@ label.select select{width:100%}
 .box_8{-webkit-box-flex:8;-moz-box-flex:8;-ms-box-flex:8;-o-box-flex:8;box-flex:8}
 .box_9{-webkit-box-flex:9;-moz-box-flex:9;-ms-box-flex:9;-o-box-flex:9;box-flex:9}
 
-button,.button{text-indent:0;border:0;display:inline-block;font-weight:bold;font-style:normal;line-height:2.5em;text-decoration:none;text-align:center;padding-left:1em;padding-right:1em;overflow:hidden;white-space:nowrap;padding-top:2px;padding-bottom:3px;}
+button,.button{text-indent:0;border:0;display:inline-block;font-weight:bold;font-style:normal;line-height:2.5em;text-decoration:none;text-align:center;padding-left:1em;padding-right:1em;overflow:hidden;white-space:nowrap;}
 button:hover,.button:hover{-webkit-box-shadow:inset 0 0 5em rgba(0,0,0,0.1),inset 0 1px rgba(0,0,0,0.1) !important;-moz-box-shadow:inset 0 0 5em rgba(0,0,0,0.1),inset 0 1px rgba(0,0,0,0.1) !important;-ms-box-shadow:inset 0 0 5em rgba(0,0,0,0.1),inset 0 1px rgba(0,0,0,0.1) !important;-o-box-shadow:inset 0 0 5em rgba(0,0,0,0.1),inset 0 1px rgba(0,0,0,0.1) !important;box-shadow:inset 0 0 5em rgba(0,0,0,0.1),inset 0 1px rgba(0,0,0,0.1) !important}
 button:active,.button:active{-webkit-box-shadow:inset 0 0 5em rgba(0,0,0,0.2),inset 0 1px rgba(0,0,0,0.2) !important;-moz-box-shadow:inset 0 0 5em rgba(0,0,0,0.2),inset 0 1px rgba(0,0,0,0.2) !important;-ms-box-shadow:inset 0 0 5em rgba(0,0,0,0.2),inset 0 1px rgba(0,0,0,0.2) !important;-o-box-shadow:inset 0 0 5em rgba(0,0,0,0.2),inset 0 1px rgba(0,0,0,0.2) !important;box-shadow:inset 0 0 5em rgba(0,0,0,0.2),inset 0 1px rgba(0,0,0,0.2) !important}
 button.smallest,.button.smallest{line-height:2em;}
@@ -229,6 +229,7 @@ header button.button .counter{margin-left:.05em;margin-right:.05em}
 footer .icon:before{font-size:1.4em}
 footer button{height:inherit;width:100%;-webkit-background-image:none;-moz-background-image:none;-ms-background-image:none;-o-background-image:none;background-image:none;background-color:rgba(0,0,0,0);}
 footer button .counter{position:relative;top:-1.2000000000000002em;line-height:15px;-webkit-border-radius:4px;-moz-border-radius:4px;-webkit-border-radius:4px;-moz-border-radius:4px;-ms-border-radius:4px;-o-border-radius:4px;border-radius:4px;padding:.2em .5em .2em .5em;font-size:.9em}
+article button,article .button{padding-top:2px;padding-bottom:3px}
 
 div.pulltorefresh{width:100%;line-height:60px;border-top:1px solid rgba(0,0,0,0.1);border-bottom:1px solid rgba(0,0,0,0.6);padding-top:440px;padding-bottom:5px;-webkit-transition:-webkit-transform 0;-moz-transition:-webkit-transform 0;-ms-transition:-webkit-transform 0;-o-transition:-webkit-transform 0;transition:-webkit-transform 0;-webkit-transform:translate(0,-511px);-moz-transform:translate(0,-511px);-ms-transform:translate(0,-511px);-o-transform:translate(0,-511px);transform:translate(0,-511px);margin-bottom:-511px;}
 div.pulltorefresh span{height:50px;line-height:50px;display:inline-block;}
