Added aside header

--- a/stylesheets/TaKo.theme.styl
+++ b/stylesheets/TaKo.theme.styl
@@ -27,7 +27,7 @@ section
 .theme
   background-color lighten(THEME, 15%)!important
 
-header
+section > header
   background-color lighten(THEME, 15%)
   background-image -webkit-linear-gradient(lighten(THEME, 35%), THEME)
   background-image -moz-linear-gradient(lighten(THEME, 35%), THEME)
