--- a/package/stylesheets/tako.css
+++ b/package/stylesheets/tako.css
@@ -45,6 +45,10 @@ aside{display:block;width:256px;top:0;bottom:0;left:-276px;position:absolute;z-i
 aside .counter{margin-top:-3px;-webkit-border-radius:2px;-moz-border-radius:2px;-webkit-border-radius:2px;-moz-border-radius:2px;-ms-border-radius:2px;-o-border-radius:2px;border-radius:2px;padding:.2em .4em .2em .4em;float:right}
 aside.show{-webkit-transform:translateX(276px);-moz-transform:translateX(276px);-ms-transform:translateX(276px);-o-transform:translateX(276px);transform:translateX(276px)}
 aside.show{z-index:201 !important}
+aside > header{width:100%;margin:0;padding:0;text-align:center;height:50px;line-height:50px;}
+aside > header > h1{font-weight:bold;display:inline-block;text-align:center;height:50px;line-height:50px;width:100%;margin:0;}
+aside > header > h1 > img{width:auto;height:42px;margin-top:8px}
+aside > header + ul{margin-top:8px}
 div[data-element="aside_background"]{position:fixed;top:50px;left:0;width:100%;height:100%;min-height:1500px;z-index:0;background-color:rgba(0,0,0,0);-webkit-transition:background-color 150ms linear;-moz-transition:background-color 150ms linear;-ms-transition:background-color 150ms linear;-o-transition:background-color 150ms linear;transition:background-color 150ms linear;}
 div[data-element="aside_background"].full{background-color:rgba(0,0,0,0) !important;top:0}
 div[data-element="aside_background"].show{background-color:rgba(0,0,0,0.6);z-index:200}
@@ -64,17 +68,17 @@ section.asided header > nav.left > button{margin-left:5px}
 section.asided footer{margin-left:268px !important}
 section.non_animated{-webkit-transition-duration:0 !important;-moz-transition-duration:0 !important;-ms-transition-duration:0 !important;-o-transition-duration:0 !important;transition-duration:0 !important;}
 section.non_animated *{-webkit-transition-duration:0 !important;-moz-transition-duration:0 !important;-ms-transition-duration:0 !important;-o-transition-duration:0 !important;transition-duration:0 !important}
-header{position:fixed;top:0;left:0;right:0;height:50px;line-height:50px;width:100%;z-index:101;text-align:center;-webkit-transition-duration:300ms;-moz-transition-duration:300ms;-ms-transition-duration:300ms;-o-transition-duration:300ms;transition-duration:300ms;}
-header > h1{font-weight:bold;display:inline-block;position:absolute;text-align:center;width:100%;left:0;margin-top:0;z-index:102;}
-header > h1 > img{width:auto;height:42px;margin-top:4px}
-header > nav{height:50px;max-height:50px;}
-header > nav.right{position:fixed;z-index:103;right:0;}
-header > nav.right > button{margin-right:5px}
-header > nav.left{position:fixed;z-index:103;left:0;}
-header > nav.left > button{margin-left:5px}
-header > nav:not(.right):not(.left){font-size:1.2em;width:100%;margin:50px 0 0 0;line-height:50px;padding:0;display:-webkit-box;display:-ms-box;display:-moz-box;display:-o-box;display:box;-webkit-box-orient:horizontal;-moz-box-orient:horizontal;-ms-box-orient:horizontal;-o-box-orient:horizontal;box-orient:horizontal;-webkit-box-direction:normal;-moz-box-direction:normal;-ms-box-direction:normal;-o-box-direction:normal;box-direction:normal;-webkit-box-pack:justify;-moz-box-pack:justify;-ms-box-pack:justify;-o-box-pack:justify;box-pack:justify;-webkit-box-align:stretch;-moz-box-align:stretch;-ms-box-align:stretch;-o-box-align:stretch;box-align:stretch;}
-header > nav:not(.right):not(.left) > *{-webkit-box-flex:1;-moz-box-flex:1;-ms-box-flex:1;-o-box-flex:1;box-flex:1;text-align:center;width:100%;display:block;height:50px;font-size:1em !important;margin-top:0 !important}
-header > nav:not(.right):not(.left) .icon{font-size:1em}
+section header{position:fixed;top:0;left:0;right:0;height:50px;line-height:50px;width:100%;z-index:101;text-align:center;-webkit-transition-duration:300ms;-moz-transition-duration:300ms;-ms-transition-duration:300ms;-o-transition-duration:300ms;transition-duration:300ms;}
+section header > h1{font-weight:bold;display:inline-block;position:absolute;text-align:center;width:100%;left:0;margin-top:0;z-index:102;}
+section header > h1 > img{width:auto;height:42px;margin-top:4px}
+section header > nav{height:50px;max-height:50px;}
+section header > nav.right{position:fixed;z-index:103;right:0;}
+section header > nav.right > button{margin-right:5px}
+section header > nav.left{position:fixed;z-index:103;left:0;}
+section header > nav.left > button{margin-left:5px}
+section header > nav:not(.right):not(.left){font-size:1.2em;width:100%;margin:50px 0 0 0;line-height:50px;padding:0;display:-webkit-box;display:-ms-box;display:-moz-box;display:-o-box;display:box;-webkit-box-orient:horizontal;-moz-box-orient:horizontal;-ms-box-orient:horizontal;-o-box-orient:horizontal;box-orient:horizontal;-webkit-box-direction:normal;-moz-box-direction:normal;-ms-box-direction:normal;-o-box-direction:normal;box-direction:normal;-webkit-box-pack:justify;-moz-box-pack:justify;-ms-box-pack:justify;-o-box-pack:justify;box-pack:justify;-webkit-box-align:stretch;-moz-box-align:stretch;-ms-box-align:stretch;-o-box-align:stretch;box-align:stretch;}
+section header > nav:not(.right):not(.left) > *{-webkit-box-flex:1;-moz-box-flex:1;-ms-box-flex:1;-o-box-flex:1;box-flex:1;text-align:center;width:100%;display:block;height:50px;font-size:1em !important;margin-top:0 !important}
+section header > nav:not(.right):not(.left) .icon{font-size:1em}
 footer{position:fixed;bottom:0;left:0;right:0;margin:0 0 -2px 0;width:100%;height:65px;line-height:65px;z-index:101;display:-webkit-box;display:-ms-box;display:-moz-box;display:-o-box;display:box;-webkit-box-orient:horizontal;-moz-box-orient:horizontal;-ms-box-orient:horizontal;-o-box-orient:horizontal;box-orient:horizontal;-webkit-box-direction:normal;-moz-box-direction:normal;-ms-box-direction:normal;-o-box-direction:normal;box-direction:normal;-webkit-box-pack:justify;-moz-box-pack:justify;-ms-box-pack:justify;-o-box-pack:justify;box-pack:justify;-webkit-box-align:stretch;-moz-box-align:stretch;-ms-box-align:stretch;-o-box-align:stretch;box-align:stretch;-webkit-transition-duration:300ms;-moz-transition-duration:300ms;-ms-transition-duration:300ms;-o-transition-duration:300ms;transition-duration:300ms;}
 footer nav{margin:0;-webkit-box-flex:1;-moz-box-flex:1;-ms-box-flex:1;-o-box-flex:1;box-flex:1;height:65px;line-height:65px;padding:0;display:-webkit-box;display:-ms-box;display:-moz-box;display:-o-box;display:box;width:100%;-webkit-box-orient:horizontal;-moz-box-orient:horizontal;-ms-box-orient:horizontal;-o-box-orient:horizontal;box-orient:horizontal;-webkit-box-direction:normal;-moz-box-direction:normal;-ms-box-direction:normal;-o-box-direction:normal;box-direction:normal;-webkit-box-pack:justify;-moz-box-pack:justify;-ms-box-pack:justify;-o-box-pack:justify;box-pack:justify;-webkit-box-align:stretch;-moz-box-align:stretch;-ms-box-align:stretch;-o-box-align:stretch;box-align:stretch;}
 footer nav > *{-webkit-box-flex:1;-moz-box-flex:1;-ms-box-flex:1;-o-box-flex:1;box-flex:1;text-align:center;width:100%;display:block;height:65px;}
