--- a/stylesheets/TaKo.section.styl
+++ b/stylesheets/TaKo.section.styl
@@ -56,81 +56,81 @@ section
     & *
       transition-duration 0ms !important
 
-header
-  position fixed
-  top 0
-  left 0
-  right 0
-  height HEADER_HEIGHT
-  line-height HEADER_HEIGHT
-  width 100%
-  z-index HEADER_INDEX
-  text-align center
-  transition-duration SECTION_TRANSITION_TIME
-
-  & > h1
-    font-weight bold
-    display inline-block
-    position absolute
-    text-align center
-    width 100%
+  & header
+    position fixed
+    top 0
     left 0
-    margin-top 0
-    z-index HEADER_H1_INDEX
-
-    & > img
-      width auto
-      height HEADER_HEIGHT - 8
-      margin-top 4px
-
-  & > nav
+    right 0
     height HEADER_HEIGHT
-    max-height HEADER_HEIGHT
+    line-height HEADER_HEIGHT
+    width 100%
+    z-index HEADER_INDEX
+    text-align center
+    transition-duration SECTION_TRANSITION_TIME
 
-    &.right
-      position fixed
-      z-index HEADER_NAV_INDEX
-      right 0
-
-      & > button
-        margin-right 5px
-
-    &.left
-      position fixed
-      z-index HEADER_NAV_INDEX
+    & > h1
+      font-weight bold
+      display inline-block
+      position absolute
+      text-align center
+      width 100%
       left 0
+      margin-top 0
+      z-index HEADER_H1_INDEX
 
-      & > button
-        margin-left 5px
+      & > img
+        width auto
+        height HEADER_HEIGHT - 8
+        margin-top 4px
 
-    &:not(.right)
-      &:not(.left)
-        font-size 1.2em
-        width 100%
-        margin HEADER_HEIGHT 0 0 0
-        line-height HEADER_HEIGHT
-        padding 0
-        display -webkit-box
-        display -ms-box
-        display -moz-box
-        display -o-box
-        display box
-        box-orient horizontal
-        box-direction normal
-        box-pack justify
-        box-align stretch
+    & > nav
+      height HEADER_HEIGHT
+      max-height HEADER_HEIGHT
 
-        & > *
-          box-flex 1
-          text-align center
+      &.right
+        position fixed
+        z-index HEADER_NAV_INDEX
+        right 0
+
+        & > button
+          margin-right 5px
+
+      &.left
+        position fixed
+        z-index HEADER_NAV_INDEX
+        left 0
+
+        & > button
+          margin-left 5px
+
+      &:not(.right)
+        &:not(.left)
+          font-size 1.2em
           width 100%
-          display block
-          height HEADER_HEIGHT
-          font-size 1em!important
-          margin-top 0!important
+          margin HEADER_HEIGHT 0 0 0
+          line-height HEADER_HEIGHT
+          padding 0
+          display -webkit-box
+          display -ms-box
+          display -moz-box
+          display -o-box
+          display box
+          box-orient horizontal
+          box-direction normal
+          box-pack justify
+          box-align stretch
 
-        & .icon
-          font-size 1em
+          & > *
+            box-flex 1
+            text-align center
+            width 100%
+            display block
+            height HEADER_HEIGHT
+            font-size 1em!important
+            margin-top 0!important
+
+          & .icon
+            font-size 1em
 
 
 
