--- a/stylesheets/Tako.medias.styl
+++ b/stylesheets/Tako.medias.styl
@@ -54,7 +54,7 @@
     &.extended_header > article
       margin-top HEADER_HEIGHT
 
-  header
+  section > header
     position relative
     top 0
     box-flex 0
