--- a/stylesheets/TaKo.notifications.styl
+++ b/stylesheets/TaKo.notifications.styl
@@ -21,21 +21,19 @@ div[data-element="notification"]
     width 100%
     height 100%
 
-  &.flexed > div
-      display -webkit-box
-      display -ms-box
-      display -moz-box
-      display -o-box
-      display box
+    display -webkit-box
+    display -ms-box
+    display -moz-box
+    display -o-box
+    display box
 
-      box-orient vertical
-      box-direction normal
-      box-pack center
-      box-align center
+    box-orient vertical
+    box-direction normal
+    box-pack center
+    box-align center
 
   & > div > section.window
     display block
-    background-color NOTIFICATION_WHITE
     margin-left auto
     margin-right auto
     max-width 350px
@@ -47,6 +45,17 @@ div[data-element="notification"]
 
     & > header
       position static
+
+    & > footer
+      position relative
+      width  100%
+      left 0
+      bottom 0
+      display block
+      height 55px
+
+      & > button
+        height 55px
 
     &:after
       display block
@@ -86,8 +95,7 @@ div[data-element="notification"]
 
     &.center
       text-align center
-      box-flex 1
-      max-height 175px
+      box-flex 0
       position relative
       top -10%
 
@@ -100,6 +108,56 @@ div[data-element="notification"]
 
     &:not(.progress) .icon
       line-height 80px
+
+    &.confirm
+
+      & > article
+        display -webkit-box
+        display -ms-box
+        display -moz-box
+        display -o-box
+        display box
+
+        box-orient horizontal
+        box-direction normal
+        box-pack center
+        box-align center
+
+        position static
+        height 125px
+        width 100%
+        color NOTIFICATION_TEXT
+
+        & > .title
+          font-weight bold
+          line-height 62.5px
+
+        & > span:not(.icon)
+          display block
+          width auto
+          text-align left
+
+        & .icon
+          display block
+          height 70px
+          line-height 70px
+          width 70px
+          font-size 3.5em
+          box-flex 0
+          margin-right 10px
+
+          & + div
+            display block
+            box-flex 0
+            text-align left
+
+      & .accept
+        float left
+        width 50%
+
+      & .cancel
+        float right
+        width 50%
 
     &.show
       opacity 1
@@ -210,6 +268,9 @@ div[data-element="notification"]
     &.loading
       & > header
         text-align center!important
+
+      & > article
+        padding-bottom 1.5em
 
       &.squared
         min-width 100px
