Bold confirm title

--- a/package/stylesheets/tako.css
+++ b/package/stylesheets/tako.css
@@ -264,8 +264,7 @@ div[data-element="notification"] > div > section.window.center{text-align:center
 div[data-element="notification"] > div > section.window .icon{display:block;text-align:center;height:100%;width:80px;font-size:3em}
 div[data-element="notification"] > div > section.window:not(.progress) .icon{line-height:80px}
 div[data-element="notification"] > div > section.window.confirm > article{display:-webkit-box;display:-ms-box;display:-moz-box;display:-o-box;display:box;-webkit-box-orient:horizontal;-moz-box-orient:horizontal;-ms-box-orient:horizontal;-o-box-orient:horizontal;box-orient:horizontal;-webkit-box-direction:normal;-moz-box-direction:normal;-ms-box-direction:normal;-o-box-direction:normal;box-direction:normal;-webkit-box-pack:center;-moz-box-pack:center;-ms-box-pack:center;-o-box-pack:center;box-pack:center;-webkit-box-align:center;-moz-box-align:center;-ms-box-align:center;-o-box-align:center;box-align:center;position:static;height:125px;width:100%;color:#000;}
-div[data-element="notification"] > div > section.window.confirm > article > .title{font-weight:bold;line-height:62.5px}
-div[data-element="notification"] > div > section.window.confirm > article > span:not(.icon){display:block;width:auto;text-align:left}
+div[data-element="notification"] > div > section.window.confirm > article .title{font-weight:bold}
 div[data-element="notification"] > div > section.window.confirm > article .icon{display:block;height:70px;line-height:70px;width:70px;font-size:3.5em;-webkit-box-flex:0;-moz-box-flex:0;-ms-box-flex:0;-o-box-flex:0;box-flex:0;margin-right:10px;}
 div[data-element="notification"] > div > section.window.confirm > article .icon + div{display:block;-webkit-box-flex:0;-moz-box-flex:0;-ms-box-flex:0;-o-box-flex:0;box-flex:0;text-align:left}
 div[data-element="notification"] > div > section.window.confirm .accept{float:left;width:50%}
