--- a/stylesheets/TaKo.notifications.styl
+++ b/stylesheets/TaKo.notifications.styl
@@ -128,14 +128,8 @@ div[data-element="notification"]
         width 100%
         color NOTIFICATION_TEXT
 
-        & > .title
+        & .title
           font-weight bold
-          line-height 62.5px
-
-        & > span:not(.icon)
-          display block
-          width auto
-          text-align left
 
         & .icon
           display block
