--- a/package/stylesheets/tako.theme.css
+++ b/package/stylesheets/tako.theme.css
@@ -11,9 +11,13 @@ section > header .button{border:1px solid #b34700}
 section > header .counter{background-color:#e65c00}
 section > header > nav:not(.right):not(.left){color:#f4f4f4;background-color:#383838 !important;}
 section > header > nav:not(.right):not(.left) .current{background-color:#575757;border-bottom:4px solid #f60;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;-ms-box-sizing:border-box;-o-box-sizing:border-box;box-sizing:border-box}
+section > header > nav:not(.right):not(.left) > *{border-right:1px solid #262626;}
+section > header > nav:not(.right):not(.left) > *:last-child{border-right:none}
 footer{background-color:#383838 !important;color:#f4f4f4 !important;}
 footer button{background-color:#383838 !important;}
 footer button:active .counter,footer button:hover .counter{background-color:#2d2d2d}
+footer > nav > *{border-right:1px solid #262626;}
+footer > nav > *:last-child{border-right:none}
 footer .counter{background-color:#2c2c2c}
 article{background-color:#e7e7e7;color:#000}
 aside{background-color:#2d2d2d;color:#f4f4f4 !important;-webkit-box-shadow:4px 0 3px 1px #171717;-moz-box-shadow:4px 0 3px 1px #171717;-ms-box-shadow:4px 0 3px 1px #171717;-o-box-shadow:4px 0 3px 1px #171717;box-shadow:4px 0 3px 1px #171717;}
