--- a/stylesheets/TaKo.notifications.styl
+++ b/stylesheets/TaKo.notifications.styl
@@ -324,7 +324,7 @@ div[data-element="notification"]
         line-height 50px
         text-align center
         display inline-block
-        font-size 2em
+        font-size 1.7em
         font-weight bolder
 
         height 50px
@@ -336,6 +336,7 @@ div[data-element="notification"]
         & + h1 > span
           text-align center
           padding-right 55px
+          padding-left 55px
 
         & + article
           display block
