--- a/package/stylesheets/tako.css
+++ b/package/stylesheets/tako.css
@@ -667,7 +667,10 @@ div[data-element="notification"] > div > section.window.custom .close + article{
 }@keyframes animated-spin{0%{-moz-transform:rotate(0);-o-transform:rotate(0);-webkit-transform:rotate(0);-webkit-transform:rotate(0);-moz-transform:rotate(0);-ms-transform:rotate(0);-o-transform:rotate(0);transform:rotate(0)}
 100%{-moz-transform:rotate(359deg);-o-transform:rotate(359deg);-webkit-transform:rotate(359deg);-webkit-transform:rotate(359deg);-moz-transform:rotate(359deg);-ms-transform:rotate(359deg);-o-transform:rotate(359deg);transform:rotate(359deg)}
 }
-@media screen and (min-width : 768px) and (orientation : landscape){body,html{display:-webkit-box;display:-ms-box;display:-o-box;display:-moz-box;display:box;-webkit-box-align:stretch;-moz-box-align:stretch;-ms-box-align:stretch;-o-box-align:stretch;box-align:stretch;-webkit-box-orient:horizontal;-moz-box-orient:horizontal;-ms-box-orient:horizontal;-o-box-orient:horizontal;box-orient:horizontal;-webkit-box-pack:justify;-moz-box-pack:justify;-ms-box-pack:justify;-o-box-pack:justify;box-pack:justify}
+@media screen and (min-width : 320px) and (max-width : 480px){[data-device="tablet"]{display:none}
+}@media screen and (min-width : 768px) and (orientation : portrait){[data-device="tablet"]{display:none}
+}@media screen and (min-width : 768px) and (orientation : landscape){[data-device="phone"]{display:none}
+body,html{display:-webkit-box;display:-ms-box;display:-o-box;display:-moz-box;display:box;-webkit-box-align:stretch;-moz-box-align:stretch;-ms-box-align:stretch;-o-box-align:stretch;box-align:stretch;-webkit-box-orient:horizontal;-moz-box-orient:horizontal;-ms-box-orient:horizontal;-o-box-orient:horizontal;box-orient:horizontal;-webkit-box-pack:justify;-moz-box-pack:justify;-ms-box-pack:justify;-o-box-pack:justify;box-pack:justify}
 div[data-element="aside_background"]{position:static;display:block;width:262px !important;z-index:200;height:100%;min-height:99%;-webkit-box-flex:0;-moz-box-flex:0;-ms-box-flex:0;-o-box-flex:0;box-flex:0;-webkit-box-ordinal-group:1;-moz-box-ordinal-group:1;-ms-box-ordinal-group:1;-o-box-ordinal-group:1;box-ordinal-group:1;top:0}
 aside{height:100%;top:0;left:0;z-index:50;position:absolute;padding-right:6px}
 section{display:none}
