--- a/stylesheets/Tako.medias.styl
+++ b/stylesheets/Tako.medias.styl
@@ -1,15 +1,15 @@
 // Phone mode
-@media screen and (min-width : 320px) and (max-width : 480px)
+@media screen and (min-device-width : 320px) and (max-device-width : 480px)
   [data-device="tablet"]
     display none
 
 // Tablet portrait mode
-@media screen and (min-width : 768px) and (orientation : portrait)
+@media screen and (min-device-width : 768px) and (orientation : portrait)
   [data-device="tablet"]
     display none
 
 // Tablet landscape & Desktop mode
-@media screen and (min-width : 768px) and (orientation : landscape)
+@media screen and (min-device-width : 768px) and (orientation : landscape)
   [data-device="phone"]
     display none
 
