--- a/stylesheets/TaKo.colors.styl
+++ b/stylesheets/TaKo.colors.styl
@@ -1,24 +1,24 @@
-BLUE    = #2340a1
+BLUE    = #3576be
 RED     = #d10400
-YELLOW  = #d9c82b
+YELLOW  = #f0d31e
 BLACK   = #000000
 WHITE   = #ffffff
 GREY    = #c0c0c0
 GREEN   = #02ac00
 PINK    = #ff56d0
 PURPLE  = #9f2ae4
-BROWN   = #b72e00
-ORANGE  = #ff5c11
+BROWN   = #813a0e
+ORANGE  = #ff7404
 FIREFOX = #FF6600
 
 .blue
   color #FFF !important
   background-color BLUE!important
-  background-image -webkit-linear-gradient(lighten(BLUE, 15%), BLUE)!important
-  background-image -moz-linear-gradient(lighten(BLUE, 15%), BLUE)!important
-  background-image -ms-linear-gradient(lighten(BLUE, 15%), BLUE)!important
-  background-image -o-linear-gradient(lighten(BLUE, 15%), BLUE)!important
-  background-image linear-gradient(lighten(BLUE, 15%), BLUE)!important
+  background-image -webkit-linear-gradient(lighten(BLUE, 30%), BLUE)!important
+  background-image -moz-linear-gradient(lighten(BLUE, 30%), BLUE)!important
+  background-image -ms-linear-gradient(lighten(BLUE, 30%), BLUE)!important
+  background-image -o-linear-gradient(lighten(BLUE, 30%), BLUE)!important
+  background-image linear-gradient(lighten(BLUE, 30%), BLUE)!important
 .red
   color #FFF !important
   background-color RED!important
@@ -28,37 +28,37 @@ FIREFOX = #FF6600
   background-image -o-linear-gradient(lighten(RED, 15%), RED)!important
   background-image linear-gradient(lighten(RED, 15%), RED)!important
 .yellow
-  color #FFF !important
+  color #000 !important
   background-color YELLOW!important
-  background-image -webkit-linear-gradient(lighten(YELLOW, 15%), YELLOW)!important
-  background-image -moz-linear-gradient(lighten(YELLOW, 15%), YELLOW)!important
-  background-image -ms-linear-gradient(lighten(YELLOW, 15%), YELLOW)!important
-  background-image -o-linear-gradient(lighten(YELLOW, 15%), YELLOW)!important
-  background-image linear-gradient(lighten(YELLOW, 15%), YELLOW)!important
+  background-image -webkit-linear-gradient(lighten(YELLOW, 40%), YELLOW)!important
+  background-image -moz-linear-gradient(lighten(YELLOW, 40%), YELLOW)!important
+  background-image -ms-linear-gradient(lighten(YELLOW, 40%), YELLOW)!important
+  background-image -o-linear-gradient(lighten(YELLOW, 40%), YELLOW)!important
+  background-image linear-gradient(lighten(YELLOW, 40%), YELLOW)!important
 .black
   color #FFF !important
   background-color BLACK!important
-  background-image -webkit-linear-gradient(lighten(BLACK, 15%), BLACK)!important
-  background-image -moz-linear-gradient(lighten(BLACK, 15%), BLACK)!important
-  background-image -ms-linear-gradient(lighten(BLACK, 15%), BLACK)!important
-  background-image -o-linear-gradient(lighten(BLACK, 15%), BLACK)!important
-  background-image linear-gradient(lighten(BLACK, 15%), BLACK)!important
+  background-image -webkit-linear-gradient(lighten(BLACK, 30%), BLACK)!important
+  background-image -moz-linear-gradient(lighten(BLACK, 30%), BLACK)!important
+  background-image -ms-linear-gradient(lighten(BLACK, 30%), BLACK)!important
+  background-image -o-linear-gradient(lighten(BLACK, 30%), BLACK)!important
+  background-image linear-gradient(lighten(BLACK, 30%), BLACK)!important
 .white
   color #000!important
   background-color WHITE!important
-  background-image -webkit-linear-gradient(lighten(WHITE, 15%), WHITE)!important
-  background-image -moz-linear-gradient(lighten(WHITE, 15%), WHITE)!important
-  background-image -ms-linear-gradient(lighten(WHITE, 15%), WHITE)!important
-  background-image -o-linear-gradient(lighten(WHITE, 15%), WHITE)!important
-  background-image linear-gradient(lighten(WHITE, 15%), WHITE)!important
+  background-image -webkit-linear-gradient(WHITE, darken(WHITE, 5%))!important
+  background-image -moz-linear-gradient(WHITE, darken(WHITE, 5%))!important
+  background-image -ms-linear-gradient(WHITE, darken(WHITE, 5%))!important
+  background-image -o-linear-gradient(WHITE, darken(WHITE, 5%))!important
+  background-image linear-gradient(WHITE, darken(WHITE, 5%))!important
 .grey
-  color #FFF !important
+  color #000 !important
   background-color GREY!important
-  background-image -webkit-linear-gradient(lighten(GREY, 15%), GREY)!important
-  background-image -moz-linear-gradient(lighten(GREY, 15%), GREY)!important
-  background-image -ms-linear-gradient(lighten(GREY, 15%), GREY)!important
-  background-image -o-linear-gradient(lighten(GREY, 15%), GREY)!important
-  background-image linear-gradient(lighten(GREY, 15%), GREY)!important
+  background-image -webkit-linear-gradient(lighten(GREY, 30%), GREY)!important
+  background-image -moz-linear-gradient(lighten(GREY, 30%), GREY)!important
+  background-image -ms-linear-gradient(lighten(GREY, 30%), GREY)!important
+  background-image -o-linear-gradient(lighten(GREY, 30%), GREY)!important
+  background-image linear-gradient(lighten(GREY, 30%), GREY)!important
 .green
   color #FFF !important
   background-color GREEN!important
@@ -70,19 +70,19 @@ FIREFOX = #FF6600
 .pink
   color #FFF !important
   background-color PINK!important
-  background-image -webkit-linear-gradient(lighten(PINK, 15%), PINK)!important
-  background-image -moz-linear-gradient(lighten(PINK, 15%), PINK)!important
-  background-image -ms-linear-gradient(lighten(PINK, 15%), PINK)!important
-  background-image -o-linear-gradient(lighten(PINK, 15%), PINK)!important
-  background-image linear-gradient(lighten(PINK, 15%), PINK)!important
+  background-image -webkit-linear-gradient(lighten(PINK, 30%), PINK)!important
+  background-image -moz-linear-gradient(lighten(PINK, 30%), PINK)!important
+  background-image -ms-linear-gradient(lighten(PINK, 30%), PINK)!important
+  background-image -o-linear-gradient(lighten(PINK, 30%), PINK)!important
+  background-image linear-gradient(lighten(PINK, 30%), PINK)!important
 .purple
   color #FFF !important
   background-color PURPLE!important
-  background-image -webkit-linear-gradient(lighten(PURPLE, 15%), PURPLE)!important
-  background-image -moz-linear-gradient(lighten(PURPLE, 15%), PURPLE)!important
-  background-image -ms-linear-gradient(lighten(PURPLE, 15%), PURPLE)!important
-  background-image -o-linear-gradient(lighten(PURPLE, 15%), PURPLE)!important
-  background-image linear-gradient(lighten(PURPLE, 15%), PURPLE)!important
+  background-image -webkit-linear-gradient(lighten(PURPLE, 30%), PURPLE)!important
+  background-image -moz-linear-gradient(lighten(PURPLE, 30%), PURPLE)!important
+  background-image -ms-linear-gradient(lighten(PURPLE, 30%), PURPLE)!important
+  background-image -o-linear-gradient(lighten(PURPLE, 30%), PURPLE)!important
+  background-image linear-gradient(lighten(PURPLE, 30%), PURPLE)!important
 .brown
   color #FFF !important
   background-color BROWN!important
@@ -94,11 +94,11 @@ FIREFOX = #FF6600
 .orange
   color #FFF !important
   background-color ORANGE!important
-  background-image -webkit-linear-gradient(lighten(ORANGE, 15%), ORANGE)!important
-  background-image -moz-linear-gradient(lighten(ORANGE, 15%), ORANGE)!important
-  background-image -ms-linear-gradient(lighten(ORANGE, 15%), ORANGE)!important
-  background-image -o-linear-gradient(lighten(ORANGE, 15%), ORANGE)!important
-  background-image linear-gradient(lighten(ORANGE, 15%), ORANGE)!important
+  background-image -webkit-linear-gradient(lighten(ORANGE, 30%), ORANGE)!important
+  background-image -moz-linear-gradient(lighten(ORANGE, 30%), ORANGE)!important
+  background-image -ms-linear-gradient(lighten(ORANGE, 30%), ORANGE)!important
+  background-image -o-linear-gradient(lighten(ORANGE, 30%), ORANGE)!important
+  background-image linear-gradient(lighten(ORANGE, 30%), ORANGE)!important
 .firefox
   color #FFF !important
   background-color FIREFOX!important
