--- a/stylesheets/TaKo.colors.styl
+++ b/stylesheets/TaKo.colors.styl
@@ -52,7 +52,7 @@ FIREFOX = #FF6600
   background-image -o-linear-gradient(WHITE, darken(WHITE, 5%))!important
   background-image linear-gradient(WHITE, darken(WHITE, 5%))!important
 .grey
-  color #000 !important
+  color #FFF !important
   background-color GREY!important
   background-image -webkit-linear-gradient(lighten(GREY, 30%), GREY)!important
   background-image -moz-linear-gradient(lighten(GREY, 30%), GREY)!important
