Fixing for small devices

--- a/stylesheets/Tako.medias.styl
+++ b/stylesheets/Tako.medias.styl
@@ -1,3 +1,9 @@
+// Small phones
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px)
+  header
+    & h1
+      font-size 17px
+
 // Phone mode
 @media screen and (min-device-width : 320px) and (max-device-width : 768px)
   [data-device="tablet"]
