--- a/stylesheets/TaKo.section.styl
+++ b/stylesheets/TaKo.section.styl
@@ -26,8 +26,8 @@ section
   &:not(.active) > article
     display none
 
-  &.footer > article
-    padding-bottom -2px
+  // &.footer > article
+  //   padding-bottom -2px
 
   &.no_header > article
     top 0
@@ -148,7 +148,7 @@ section
 
 footer
   position relative
-  bottom 0
+  bottom 2px
   left 0
   right 0
   box-flex 0
