--- a/stylesheets/TaKo.section.styl
+++ b/stylesheets/TaKo.section.styl
@@ -207,10 +207,9 @@ article
   width 100%
   display none
   margin 0
-  top HEADER_HEIGHT
-  overflow visible
-  height inherit
+  overflow-x hidden
   overflow-y scroll
+  -webkit-overflow-scrolling touch
   box-flex 1
   ordinal-group(2)
 
