--- a/stylesheets/Tako.medias.styl
+++ b/stylesheets/Tako.medias.styl
@@ -33,7 +33,7 @@
   div[data-element="aside_background"]
     position static
     display block
-    width ASIDE_WIDTH + ASIDE_PADDING!important
+    width ASIDE_WIDTH!important
     z-index ASIDE_BCK_INDEX
     height 100%
     min-height 99%
