--- a/stylesheets/Tako.pullrefresh.styl
+++ b/stylesheets/Tako.pullrefresh.styl
@@ -41,3 +41,6 @@ div.pulltorefresh
         font-size 3em
         margin-right .5em
         margin-top 10px
+
+      &.rotated
+        transform(rotate(180deg))
