--- a/stylesheets/Tako.medias.styl
+++ b/stylesheets/Tako.medias.styl
@@ -77,6 +77,7 @@
   section > header
     position relative
     top 0
+    left 6px
     box-flex 0
     margin 0
     text-align left
@@ -133,6 +134,7 @@
   footer
     position relative
     bottom 2px
+    left 6px
     box-flex 0
     ordinal-group(3)
 
