--- a/stylesheets/Tako.medias.styl
+++ b/stylesheets/Tako.medias.styl
@@ -48,6 +48,7 @@
     z-index FULL_ASIDE_INDEX
     position absolute
     padding-right ASIDE_PADDING
+    box-sizing border-box
 
   section
     display none
@@ -77,7 +78,6 @@
   section > header
     position relative
     top 0
-    left 6px
     box-flex 0
     margin 0
     text-align left
@@ -134,7 +134,6 @@
   footer
     position relative
     bottom 2px
-    left 6px
     box-flex 0
     ordinal-group(3)
 
