--- a/stylesheets/Tako.medias.styl
+++ b/stylesheets/Tako.medias.styl
@@ -1,5 +1,7 @@
 // Small phones
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px)
+  [data-device="tablet"]
+    display none!important
   header
     & h1
       font-size 17px
