--- a/stylesheets/TaKo.section.styl
+++ b/stylesheets/TaKo.section.styl
@@ -32,6 +32,9 @@ section
   &.extended_header > article
     margin-top HEADER_HEIGHT
 
+  &.footer > article
+    margin-bottom FOOTER_HEIGHT
+
   &.asided
     & header
       margin-left ASIDE_WIDTH + ASIDE_PADDING * 2 !important
