Fixing in tabletmode

--- a/stylesheets/Tako.medias.styl
+++ b/stylesheets/Tako.medias.styl
@@ -73,6 +73,7 @@
 
     &.footer > article
       padding-bottom 2px!important
+      margin-bottom 0
 
     &.extended_header > article
       margin-top HEADER_HEIGHT
