--- a/package/stylesheets/tako.css
+++ b/package/stylesheets/tako.css
@@ -681,7 +681,7 @@ div[data-element="aside_background"]{position:static;display:block;width:256px !
 aside{height:100%;top:0;left:0;z-index:50;position:absolute;padding-right:6px;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;-ms-box-sizing:border-box;-o-box-sizing:border-box;box-sizing:border-box}
 section{display:none}
 section.active{position:static;-webkit-box-flex:1;-moz-box-flex:1;-ms-box-flex:1;-o-box-flex:1;box-flex:1;-webkit-box-ordinal-group:2;-moz-box-ordinal-group:2;-ms-box-ordinal-group:2;-o-box-ordinal-group:2;box-ordinal-group:2;height:100%;display:-webkit-box;display:-ms-box;display:-o-box;display:-moz-box;display:box;-webkit-box-align:stretch;-moz-box-align:stretch;-ms-box-align:stretch;-o-box-align:stretch;box-align:stretch;-webkit-box-orient:vertical;-moz-box-orient:vertical;-ms-box-orient:vertical;-o-box-orient:vertical;box-orient:vertical;-webkit-box-pack:justify;-moz-box-pack:justify;-ms-box-pack:justify;-o-box-pack:justify;box-pack:justify;}
-section.active.footer > article{padding-bottom:2px !important}
+section.active.footer > article{padding-bottom:2px !important;margin-bottom:0}
 section.active.extended_header > article{margin-top:50px}
 section > header{text-align:left;}
 section > header > h1{position:static;text-align:left;width:auto;padding:0 1em;margin:0;}
