Fixed notifications in android 2.3

--- a/stylesheets/TaKo.theme.styl
+++ b/stylesheets/TaKo.theme.styl
@@ -28,12 +28,12 @@ section
   background-color lighten(THEME, 15%)!important
 
 section > header
-  background-color lighten(THEME, 15%)
-  background-image -webkit-linear-gradient(lighten(THEME, 35%), THEME)
-  background-image -moz-linear-gradient(lighten(THEME, 35%), THEME)
-  background-image -ms-linear-gradient(lighten(THEME, 35%), THEME)
-  background-image -o-linear-gradient(lighten(THEME, 35%), THEME)
-  background-image linear-gradient(lighten(THEME, 35%), THEME)
+  background-color lighten(THEME, 15%)!important
+  background-image -webkit-linear-gradient(lighten(THEME, 35%), THEME)!important
+  background-image -moz-linear-gradient(lighten(THEME, 35%), THEME)!important
+  background-image -ms-linear-gradient(lighten(THEME, 35%), THEME)!important
+  background-image -o-linear-gradient(lighten(THEME, 35%), THEME)!important
+  background-image linear-gradient(lighten(THEME, 35%), THEME)!important
   color SECONDARY_TEXT !important
 
   & .counter
@@ -105,21 +105,21 @@ button, .button
   color SECONDARY_TEXT
 
   &.accept
-    background-color lighten(SUCCESS, 15%)
-    background-image -webkit-linear-gradient(lighten(SUCCESS, 15%), SUCCESS)
-    background-image -moz-linear-gradient(lighten(SUCCESS, 15%), SUCCESS)
-    background-image -ms-linear-gradient(lighten(SUCCESS, 15%), SUCCESS)
-    background-image -o-linear-gradient(lighten(SUCCESS, 15%), SUCCESS)
-    background-image linear-gradient(lighten(SUCCESS, 15%), SUCCESS)
+    background-color lighten(SUCCESS, 15%)!important
+    background-image -webkit-linear-gradient(lighten(SUCCESS, 15%), SUCCESS)!important
+    background-image -moz-linear-gradient(lighten(SUCCESS, 15%), SUCCESS)!important
+    background-image -ms-linear-gradient(lighten(SUCCESS, 15%), SUCCESS)!important
+    background-image -o-linear-gradient(lighten(SUCCESS, 15%), SUCCESS)!important
+    background-image linear-gradient(lighten(SUCCESS, 15%), SUCCESS)!important
     color #FFF
 
   &.cancel
-    background-color lighten(FAIL, 15%)
-    background-image -webkit-linear-gradient(lighten(FAIL, 15%), FAIL)
-    background-image -moz-linear-gradient(lighten(FAIL, 15%), FAIL)
-    background-image -ms-linear-gradient(lighten(FAIL, 15%), FAIL)
-    background-image -o-linear-gradient(lighten(FAIL, 15%), FAIL)
-    background-image linear-gradient(lighten(FAIL, 15%), FAIL)
+    background-color lighten(FAIL, 15%)!important
+    background-image -webkit-linear-gradient(lighten(FAIL, 15%), FAIL)!important
+    background-image -moz-linear-gradient(lighten(FAIL, 15%), FAIL)!important
+    background-image -ms-linear-gradient(lighten(FAIL, 15%), FAIL)!important
+    background-image -o-linear-gradient(lighten(FAIL, 15%), FAIL)!important
+    background-image linear-gradient(lighten(FAIL, 15%), FAIL)!important
     color #FFF
 
 aside .current, footer .current
