New notification fixing

--- a/stylesheets/TaKo.theme.styl
+++ b/stylesheets/TaKo.theme.styl
@@ -136,20 +136,20 @@ div[data-element="notification"] > div > section.window
     font-weight bold
 
   &.success > header
-    background-color lighten(SUCCESS, 15%)
-    background-image -webkit-linear-gradient(lighten(SUCCESS, 15%), SUCCESS)
-    background-image -moz-linear-gradient(lighten(SUCCESS, 15%), SUCCESS)
-    background-image -ms-linear-gradient(lighten(SUCCESS, 15%), SUCCESS)
-    background-image -o-linear-gradient(lighten(SUCCESS, 15%), SUCCESS)
-    background-image linear-gradient(lighten(SUCCESS, 15%), SUCCESS)
+    background-color lighten(SUCCESS, 15%)!important
+    background-image -webkit-linear-gradient(lighten(SUCCESS, 15%), SUCCESS)!important
+    background-image -moz-linear-gradient(lighten(SUCCESS, 15%), SUCCESS)!important
+    background-image -ms-linear-gradient(lighten(SUCCESS, 15%), SUCCESS)!important
+    background-image -o-linear-gradient(lighten(SUCCESS, 15%), SUCCESS)!important
+    background-image linear-gradient(lighten(SUCCESS, 15%), SUCCESS)!important
 
   &.error > header
-    background-color lighten(FAIL, 15%)
-    background-image -webkit-linear-gradient(lighten(FAIL, 15%), FAIL)
-    background-image -moz-linear-gradient(lighten(FAIL, 15%), FAIL)
-    background-image -ms-linear-gradient(lighten(FAIL, 15%), FAIL)
-    background-image -o-linear-gradient(lighten(FAIL, 15%), FAIL)
-    background-image linear-gradient(lighten(FAIL, 15%), FAIL)
+    background-color lighten(FAIL, 15%)!important
+    background-image -webkit-linear-gradient(lighten(FAIL, 15%), FAIL)!important
+    background-image -moz-linear-gradient(lighten(FAIL, 15%), FAIL)!important
+    background-image -ms-linear-gradient(lighten(FAIL, 15%), FAIL)!important
+    background-image -o-linear-gradient(lighten(FAIL, 15%), FAIL)!important
+    background-image linear-gradient(lighten(FAIL, 15%), FAIL)!important
 
 
 [data-element=notification] .loading .icon
