--- a/stylesheets/TaKo.notifications.styl
+++ b/stylesheets/TaKo.notifications.styl
@@ -260,8 +260,6 @@ div[data-element="notification"]
 
         & #notification_progress
           height 10px
-          position relative
-          bottom 15px
           width 90%
           margin-left auto
           margin-right auto
@@ -302,6 +300,12 @@ div[data-element="notification"]
     &.progress
       & > article
         height 150px
+        line-height 20px
+
+      & span.content
+        display inline-block
+        margin-top 25px
+        margin-bottom 25px
 
     &.custom
       & > header
