--- a/stylesheets/Tako.aside.styl
+++ b/stylesheets/Tako.aside.styl
@@ -3,6 +3,7 @@ aside
   width ASIDE_WIDTH
   top 0
   bottom 0
+  height 100%
   left - ASIDE_TRANSITION
   position absolute
   z-index ASIDE_INDEX
@@ -47,12 +48,11 @@ aside
       margin-top 8px
 
 div[data-element="aside_background"]
-  position fixed
+  position absolute
   top HEADER_HEIGHT
   left 0
   width 100%
   height 100%
-  min-height 1500px
   z-index 0
   background-color rgba(0, 0, 0, 0)
   transition(background-color ASIDE_TRANSITION_TIME linear)
